[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/prototypes/Shootp.wav" type="AudioStream" id=1]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=2]
[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/prototypes/shoote.wav" type="AudioStream" id=4]

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="EndOfShape" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="ShapeDirection" type="Position2D" parent="."]
position = Vector2( 43, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="PlayerShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="EnemyShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
